updates of the code

--- a/conf/SBDL.conf
+++ b/conf/SBDL.conf
@@ -1,12 +1,42 @@
 [LOCAL]
 enable.hive = false
 hive.database = null
-kafka.topic = SBDL_kafka_cloud
+account.filter = active_ind = 1
+parties.filter =
+address.filter =
+kafka.topic =
+kafka.bootstrap.servers =
+kafka.security.protocol =
+kafka.sasl.mechanism =
+kafka.client.dns.lookup =
+kafka.sasl.jaas.config =
+kafka.api_key =
+kafka.api_secret =
 [QA]
 enable.hive = true
 hive.database = SBDL_db_qa
-kafka.topic = SBDL_kafka_qa
+account.filter = active_ind = 1
+parties.filter =
+address.filter =
+kafka.topic =
+kafka.bootstrap.servers =
+kafka.security.protocol =
+kafka.sasl.mechanism =
+kafka.client.dns.lookup =
+kafka.sasl.jaas.config =
+kafka.api_key =
+kafka.api_secret =
 [PROD]
 enable.hive = true
 hive.database = SBDL_db
-kafka.topic = SBDL_kafka
+account.filter = active_ind = 1
+parties.filter =
+address.filter =
+kafka.topic =
+kafka.bootstrap.servers =
+kafka.security.protocol =
+kafka.sasl.mechanism =
+kafka.client.dns.lookup =
+kafka.sasl.jaas.config =
+kafka.api_key =
+kafka.api_secret =
